# Todo-disoft

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: celery.py  urls.py
backend/apps/api/: urls.py
backend/apps/api/base/: fields.py  pagination.py  views.py
backend/apps/api/todo/: filters.py  serializers.py  urls.py  views.py
backend/apps/api/users/: serializers.py  urls.py  views.py
backend/apps/db/base/: constants.py
backend/apps/db/todo/: __init__.py  admin.py  apps.py  managers.py  models.py
backend/apps/db/todo/migrations/: 0001_initial.py
backend/apps/db/users/: admin.py
backend/apps/db/users/migrations/: 0002_alter_user_last_login.py
backend/apps/service/: uploads.py
backend/apps/service/tasks/: email_tasks.py
backend/settings/: base.py
backend/settings/components/: _apps.py  _base.py  _celery.py  _database.py  _jazzmin.py  _logger.py  _rabbit.py  _redis.py
docker/compose/: docker-compose.local.yml
docker/db/: init.sql
docker/django/: Dockerfile
docker/environment/: app.local.env
